[gd_scene load_steps=6 format=3 uid="uid://dt470qm1pwj78"]

[ext_resource type="Script" path="res://Script/Play/Salas/Objetos/puzzle_2_sala_azul.gd" id="1_raqmp"]
[ext_resource type="Script" path="res://Script/Play/Helpers/buttonPlus.gd" id="2_7tki5"]
[ext_resource type="Texture2D" uid="uid://cpgi8fxko55i1" path="res://Asset/Images/Rooms/Gaveta.png" id="2_8cn5a"]
[ext_resource type="AudioStream" uid="uid://da10t0s8wj6ea" path="res://Asset/Audio/Effects/Puzzle_Success.mp3" id="4_8pb34"]
[ext_resource type="Texture2D" uid="uid://cuubgwxulgcgs" path="res://Asset/Images/Inventario/chave_dourada.png" id="5_trgih"]

[node name="Control" type="Control" node_paths=PackedStringArray("b1", "b2", "b3", "sala", "chave", "music_completion")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_raqmp")
b1 = NodePath("Control/VBoxContainer/VBox_codigo1/Button")
b2 = NodePath("Control/VBoxContainer/VBox_codigo2/Button")
b3 = NodePath("Control/VBoxContainer/VBox_codigo3/Button")
sala = NodePath(".")
chave = NodePath("Chave")
music_completion = NodePath("s_puzzle_complet")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_8cn5a")

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("b1", "b2", "b3")]
layout_mode = 1
anchors_preset = 0
offset_bottom = 614.0
script = ExtResource("2_7tki5")
b1 = NodePath("VBoxContainer/VBox_codigo1/Button")
b2 = NodePath("VBoxContainer/VBox_codigo2/Button")
b3 = NodePath("VBoxContainer/VBox_codigo3/Button")

[node name="VBox_codigo4" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_left = 897.0
offset_top = 972.0
offset_right = 971.0
offset_bottom = 1008.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="Control/VBox_codigo4"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "         "

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 923.0
offset_top = 821.0
offset_right = 945.0
offset_bottom = 958.0
theme_override_constants/separation = 14

[node name="VBox_codigo1" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="Control/VBoxContainer/VBox_codigo1"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="VBox_codigo2" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="Control/VBoxContainer/VBox_codigo2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="VBox_codigo3" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="Control/VBoxContainer/VBox_codigo3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="s_puzzle_complet" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8pb34")
bus = &"Sfx"

[node name="Chave" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 1322.0
offset_top = 765.0
offset_right = 1528.0
offset_bottom = 850.0
texture_normal = ExtResource("5_trgih")

[connection signal="pressed" from="Control/VBox_codigo4/Button" to="." method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBox_codigo1/Button" to="Control" method="_on_button1_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBox_codigo2/Button" to="Control" method="_on_button2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBox_codigo3/Button" to="Control" method="_on_button3_pressed"]
[connection signal="pressed" from="Chave" to="." method="_on_chave_pressed"]
